--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <h2>Voltage Drop & Fuse Calculator</h2>
   
   <label>System Voltage (V): <input type="number" id="voltage" value="12"></label><br><br>
-  <label>Load Current (A): <input type="number" id="current" value="30"></label><br><br>
-  <label>Round-Trip Cable Length (m): <input type="number" id="length" value="10"></label><br><br>
+  <label>Load Current (A): <input type="number" id="current" value="300"></label><br><br>
+  <label>Round-Trip Cable Length (m): <input type="number" id="length" value="5"></label><br><br>
+  <label>Voltage Drop Limit (%): <input type="number" id="dropLimit" value="3"></label><br><br>
+  
   <label>Selected Cable Size (mm²): 
     <select id="cableSize">
       <option value="2.5">2.5</option>
@@ -17,6 +19,10 @@
       <option value="10">10</option>
       <option value="16">16</option>
       <option value="25">25</option>
+      <option value="35">35</option>
+      <option value="50">50</option>
+      <option value="70">70</option>
+      <option value="90">90</option>
     </select>
   </label><br><br>
 
@@ -34,36 +40,36 @@
       const I = parseFloat(document.getElementById("current").value);
       const L = parseFloat(document.getElementById("length").value);
       const A = parseFloat(document.getElementById("cableSize").value);
+      const limit = parseFloat(document.getElementById("dropLimit").value);
 
-      const resistivity = 0.0175; // Copper ohm·mm²/m
-      const R = (resistivity * L * 2) / A; // Ohms
-      const Vdrop = I * R; // Volts
+      const resistivity = 0.0175; // ohm·mm²/m for copper
+      const R = (resistivity * L * 2) / A;
+      const Vdrop = I * R;
       const percentDrop = (Vdrop / V) * 100;
 
-      // Fuse recommendation
-      let fuse;
-      if (I <= 25) fuse = "Blade Fuse: 25A";
-      else if (I <= 40) fuse = "MIDI Fuse: 40A";
-      else if (I <= 60) fuse = "MIDI Fuse: 60A";
-      else if (I <= 100) fuse = "MIDI Fuse: 100A";
-      else if (I <= 180) fuse = "MIDI Fuse: 180A";
-      else if (I <= 600) fuse = "MEGA Fuse: 600A";
-      else fuse = "Type 3 High Current Fuse (custom)";
+      // Fuse recommendation (round up to nearest common size)
+      const fuseSizes = [5, 10, 15, 20, 25, 30, 40, 50, 60, 80, 100, 125, 150, 175, 200, 250, 300, 350, 400, 500, 600, 700, 800, 900, 1000];
+      let fuse = "Over 1000A (custom)";
+      for (let f of fuseSizes) {
+        if (I <= f) {
+          fuse = f + "A";
+          break;
+        }
+      }
 
-      // Recommend minimum cable size
-      const sizes = [2.5, 4, 6, 10, 16, 25];
-      let recommendedSize = "N/A";
+      // Recommended cable size
+      const sizes = [2.5, 4, 6, 10, 16, 25, 35, 50, 70, 90];
+      let recommendedSize = "Above 90 mm² required";
       for (let size of sizes) {
         const rTest = (resistivity * L * 2) / size;
         const vDropTest = I * rTest;
         const percentTest = (vDropTest / V) * 100;
-        if (percentTest <= 3) {
+        if (percentTest <= limit) {
           recommendedSize = `${size} mm²`;
           break;
         }
       }
 
-      // Output
       document.getElementById("voltageDrop").innerText = `Voltage Drop: ${Vdrop.toFixed(2)} V`;
       document.getElementById("dropPercent").innerText = `Voltage Drop (%): ${percentDrop.toFixed(2)} %`;
       document.getElementById("fuseSuggestion").innerText = `Recommended Fuse: ${fuse}`;
