--- a/index.html
+++ b/index.html
@@ -1,75 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Voltage Drop & Fuse Calculator</title>
+  <title>Voltage Drop & Fuse Calculator (AS/NZS Enhanced)</title>
+  <style>
+    body { font-family: Arial; padding: 20px; }
+    label, select, input { margin: 8px 0; display: block; }
+    h2 { margin-top: 0; }
+    .group { margin-bottom: 20px; }
+  </style>
 </head>
 <body>
   <h2>Voltage Drop & Fuse Calculator</h2>
-  
-  <label>System Voltage (V): <input type="number" id="voltage" value="12"></label><br><br>
-  <label>Load Current (A): <input type="number" id="current" value="300"></label><br><br>
-  <label>Round-Trip Cable Length (m): <input type="number" id="length" value="5"></label><br><br>
-  <label>Voltage Drop Limit (%): <input type="number" id="dropLimit" value="3"></label><br><br>
-  
-  <label>Selected Cable Size (mm²): 
-    <select id="cableSize">
-      <option value="2.5">2.5</option>
-      <option value="4">4</option>
-      <option value="6">6</option>
-      <option value="10">10</option>
-      <option value="16">16</option>
-      <option value="25">25</option>
-      <option value="35">35</option>
-      <option value="50">50</option>
-      <option value="70">70</option>
-      <option value="90">90</option>
-    </select>
-  </label><br><br>
+
+  <div class="group">
+    <label>System Voltage (V): <input type="number" id="voltage" value="12"></label>
+    <label>Load Current (A): <input type="number" id="current" value=""></label>
+    <label>OR System Power Usage (W): <input type="number" id="power" value=""></label>
+    <label>Round-Trip Cable Length (m): <input type="number" id="length" value="5"></label>
+    <label>Voltage Drop Limit (%): <input type="number" id="dropLimit" value="3"></label>
+    <label>Cable Size (mm²): 
+      <select id="cableSize">
+        <option value="2.5">2.5</option>
+        <option value="4">4</option>
+        <option value="6">6</option>
+        <option value="10">10</option>
+        <option value="16">16</option>
+        <option value="25">25</option>
+        <option value="35">35</option>
+        <option value="50">50</option>
+        <option value="70">70</option>
+        <option value="90">90</option>
+      </select>
+    </label>
+  </div>
+
+  <div class="group">
+    <h3>Installation Conditions (AS/NZS)</h3>
+    <label>Installation Method:
+      <select id="installType">
+        <option value="enclosed">Enclosed</option>
+        <option value="conduit">In Conduit (Wall)</option>
+        <option value="buried">Buried Direct</option>
+        <option value="air">Open Air</option>
+      </select>
+    </label>
+    <label>Ambient Temperature (°C):
+      <select id="ambientTemp">
+        <option value="25">25°C</option>
+        <option value="30">30°C</option>
+        <option value="40">40°C</option>
+        <option value="50">50°C</option>
+      </select>
+    </label>
+  </div>
 
   <button onclick="calculate()">Calculate</button>
 
-  <h3>Results</h3>
-  <p id="voltageDrop">Voltage Drop: </p>
-  <p id="dropPercent">Voltage Drop (%): </p>
-  <p id="fuseSuggestion">Recommended Fuse: </p>
-  <p id="recommendedCable">Recommended Minimum Cable Size: </p>
+  <div class="group">
+    <h3>Results</h3>
+    <p id="wattageOutput">Wattage: </p>
+    <p id="voltageDrop">Voltage Drop: </p>
+    <p id="dropPercent">Voltage Drop (%): </p>
+    <p id="fuseSuggestion">Recommended Fuse: </p>
+    <p id="recommendedCable">Recommended Minimum Cable Size: </p>
+  </div>
 
   <script>
+    function getAmpacity(size, install, temp) {
+      // AS/NZS simplified ampacity (example values, conservative)
+      const base = {
+        "2.5": { enclosed: 18, conduit: 21, buried: 25, air: 30 },
+        "4":   { enclosed: 24, conduit: 27, buried: 31, air: 39 },
+        "6":   { enclosed: 32, conduit: 34, buried: 38, air: 47 },
+        "10":  { enclosed: 45, conduit: 48, buried: 55, air: 65 },
+        "16":  { enclosed: 60, conduit: 65, buried: 75, air: 85 },
+        "25":  { enclosed: 80, conduit: 90, buried: 100, air: 110 },
+        "35":  { enclosed: 100, conduit: 110, buried: 125, air: 135 },
+        "50":  { enclosed: 125, conduit: 135, buried: 150, air: 170 },
+        "70":  { enclosed: 160, conduit: 180, buried: 200, air: 220 },
+        "90":  { enclosed: 190, conduit: 210, buried: 230, air: 260 }
+      };
+      const tempFactor = { 25: 1.0, 30: 0.94, 40: 0.87, 50: 0.75 };
+      return base[size][install] * tempFactor[temp];
+    }
+
     function calculate() {
       const V = parseFloat(document.getElementById("voltage").value);
-      const I = parseFloat(document.getElementById("current").value);
       const L = parseFloat(document.getElementById("length").value);
+      const dropLimit = parseFloat(document.getElementById("dropLimit").value);
+      const power = parseFloat(document.getElementById("power").value);
+      let I = parseFloat(document.getElementById("current").value);
       const A = parseFloat(document.getElementById("cableSize").value);
-      const limit = parseFloat(document.getElementById("dropLimit").value);
+      const install = document.getElementById("installType").value;
+      const temp = parseFloat(document.getElementById("ambientTemp").value);
 
-      const resistivity = 0.0175; // ohm·mm²/m for copper
+      if (!I && power && V) I = power / V;
+      if (!I) { alert("Enter current or wattage."); return; }
+      
+      const wattage = I * V;
+      const resistivity = 0.0175; // ohm·mm²/m
       const R = (resistivity * L * 2) / A;
       const Vdrop = I * R;
       const percentDrop = (Vdrop / V) * 100;
 
-      // Fuse recommendation (round up to nearest common size)
-      const fuseSizes = [5, 10, 15, 20, 25, 30, 40, 50, 60, 80, 100, 125, 150, 175, 200, 250, 300, 350, 400, 500, 600, 700, 800, 900, 1000];
-      let fuse = "Over 1000A (custom)";
+      // Fuse recommendation
+      const fuseSizes = [5,10,15,20,25,30,40,50,60,80,100,125,150,175,200,250,300,350,400,500,600,700,800,900,1000];
+      let fuse = "No suitable standard fuse available for this load";
       for (let f of fuseSizes) {
-        if (I <= f) {
-          fuse = f + "A";
-          break;
-        }
+        if (f > I) { fuse = f + "A"; break; }
       }
 
-      // Recommended cable size
-      const sizes = [2.5, 4, 6, 10, 16, 25, 35, 50, 70, 90];
+      // Recommended cable size based on ampacity and voltage drop
+      const sizes = [2.5,4,6,10,16,25,35,50,70,90];
       let recommendedSize = "Above 90 mm² required";
       for (let size of sizes) {
+        const ampacity = getAmpacity(size, install, temp);
         const rTest = (resistivity * L * 2) / size;
         const vDropTest = I * rTest;
         const percentTest = (vDropTest / V) * 100;
-        if (percentTest <= limit) {
-          recommendedSize = `${size} mm²`;
+        if (ampacity >= I && percentTest <= dropLimit) {
+          recommendedSize = size + " mm²";
           break;
         }
       }
 
+      document.getElementById("wattageOutput").innerText = `Wattage: ${wattage.toFixed(1)} W`;
       document.getElementById("voltageDrop").innerText = `Voltage Drop: ${Vdrop.toFixed(2)} V`;
       document.getElementById("dropPercent").innerText = `Voltage Drop (%): ${percentDrop.toFixed(2)} %`;
       document.getElementById("fuseSuggestion").innerText = `Recommended Fuse: ${fuse}`;
